--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "parcel-plugin-handlebars-precompile": "^1.0.2"
   },
   "dependencies": {
+    "@pnotify/core": "^5.2.0",
+    "basiclightbox": "^5.0.3",
     "gh-pages": "^3.1.0",
     "parcel-plugin-nuke-dist": "^1.0.1"
   }
