--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /goit-js-hw-10-food-service/",
+    "build": "parcel build src/*.html --public-url /goit-js-hw-13-image-finder/",
     "deploy": "gh-pages -d dist",
     "predeploy": "npm run build"
   },
@@ -21,13 +21,15 @@
   },
   "homepage": "https://github.com/AlexanderKholodnyak/goit-js-hw-13-image-finder",
   "devDependencies": {
-    "parcel-bundler": "^1.12.4",
-    "parcel-plugin-handlebars-precompile": "^1.0.2"
-  },
-  "dependencies": {
-    "@pnotify/core": "^5.2.0",
     "basiclightbox": "^5.0.3",
     "gh-pages": "^3.1.0",
-    "parcel-plugin-nuke-dist": "^1.0.1"
+    "lodash.debounce": "^4.0.8",
+    "parcel-bundler": "^1.12.4",
+    "parcel-plugin-handlebars-precompile": "^1.0.2",
+    "parcel-plugin-nuke-dist": "^1.0.1",
+    "pnotify": "^5.2.0"
+  },
+  "dependencies": {
+    "@pnotify/core": "^5.2.0"
   }
 }
